# diff2html-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Containerfile  LICENSE  PERFORMANCE_REPORT.md  PLAN.md  README.md  justfile
.github/workflows/: ci.yml  release.yml
diff2html/: Cargo.toml  README.md
diff2html-cli/: Cargo.toml  README.md
diff2html-cli/src/: args.rs  config.rs  input.rs  main.rs  output.rs
diff2html-cli/templates/: diff2html-ui.min.js  wrapper.html
diff2html-cli/tests/: cli_tests.rs
diff2html-cli/tests/fixtures/: combined.diff  rename.diff  simple.diff  unified_with_timestamps.diff
diff2html/benches/: diff2html_benchmarks.rs
diff2html/examples/: basic.rs  custom_parser.rs  json_output.rs  line_matching.rs  profile.rs  side_by_side.rs
diff2html/src/: lib.rs  parser.rs  rematch.rs  templates.rs  types.rs
diff2html/src/render/: file_list.rs  line_by_line.rs  mod.rs  side_by_side.rs  utils.rs
diff2html/templates/: file-summary-line.mustache  generic-block-header.mustache  generic-file-path.mustache  generic-line.mustache
diff2html/tests/: parser_tests.rs  render_tests.rs
diff2html/tests/fixtures/: binary.diff  copy.diff  deleted_file.diff  html_escape.diff  multiple_blocks.diff  multiple_files.diff  new_file.diff  special_chars.diff  unified_non_git.diff
