[package]
name = "diff2html-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool to generate HTML from unified diffs"
license = "MIT"
repository = "https://github.com/rtfpessoa/diff2html-rs"
homepage = "https://diff2html.xyz/"
documentation = "https://docs.rs/diff2html-cli"
readme = "README.md"
keywords = ["diff", "html", "git", "cli", "diff-viewer"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "diff2html"
path = "src/main.rs"

[dependencies]
diff2html = { path = "../diff2html" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
open = "5.3"
serde_json = "1.0"
