[package]
name = "diff2html"
version = "0.1.0"
edition = "2024"
description = "Parse unified diffs and generate HTML"
license = "MIT"
repository = "https://github.com/rtfpessoa/diff2html-rs"
homepage = "https://diff2html.xyz/"
documentation = "https://docs.rs/diff2html"
readme = "README.md"
keywords = ["diff", "html", "git", "unified-diff", "diff-viewer"]
categories = ["command-line-utilities", "text-processing", "visualization"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "2.0"
once_cell = "1.19"
handlebars = "6.2"
similar = "2.6"

[[example]]
name = "basic"

[[example]]
name = "side_by_side"

[[example]]
name = "json_output"

[[example]]
name = "custom_parser"

[[example]]
name = "line_matching"
