[package]
name = "diff2html"
version = "0.1.0"
edition = "2024"
description = "Parse unified diffs and generate HTML"
license = "MIT"
readme = "README.md"
keywords = ["diff", "html", "git", "unified-diff", "diff-viewer"]
categories = ["command-line-utilities", "text-processing", "visualization"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "2.0"
handlebars = "6.2"
similar = "2.6"

[[example]]
name = "basic"

[[example]]
name = "side_by_side"

[[example]]
name = "json_output"

[[example]]
name = "custom_parser"

[[example]]
name = "line_matching"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "diff2html_benchmarks"
harness = false
