[package]
name = "diff2html"
version.workspace = true
edition.workspace = true
description = "Parse unified diffs and generate HTML"
license.workspace = true
readme = "README.md"
keywords = ["diff", "html", "git", "unified-diff", "diff-viewer"]
categories = ["command-line-utilities", "text-processing", "visualization"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "2.0"
handlebars = "6.2"
similar = "2.6"

[[example]]
name = "basic"

[[example]]
name = "side_by_side"

[[example]]
name = "json_output"

[[example]]
name = "custom_parser"

[[example]]
name = "line_matching"
